fixed button from causing x-overflow when screen too small

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -34,4 +34,5 @@ header {
     text-decoration: none;
     color: black;
     font-size: 20px;
+    max-width: 100%;
 }
